--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link ref="stylesheet" href="/assets/css/main.css">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <title>DragonRider</title>
+    <link rel="stylesheet" href="/assets/css/main.css">
+  </head>
+  <body>
+    <canvas id="main-canvas" width="500" height="800"></canvas>
 
     <script src="/assets/js/constants.js"></script>
+    <script src="/assets/js/models/game.js"></script>
+
     <script src="/assets/js/index.js"></script>
-</body>
+  </body>
 </html>
