--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="/assets/css/main.css">
   </head>
   <body>
-    <canvas id="main-canvas" width="500" height="800"></canvas>
+    <canvas id="main-canvas"></canvas>
 
     <script src="/assets/js/constants.js"></script>
+    <script src="/assets/js/models/player.js"></script>
     <script src="/assets/js/models/game.js"></script>
 
     <script src="/assets/js/index.js"></script>
