--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>DragonRider</title>
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="/assets/css/main.css" />
   </head>
   <body>
     <canvas id="main-canvas"></canvas>
+<script  src="assets/js/models/bg/bg-elements.js"></script>
+<script  src="assets/js/constants.js"></script>
 
-    <script src="/assets/js/constants.js"></script>
-    <script src="/assets/js/models/player.js"></script>
-    <script src="/assets/js/models/game.js"></script>
-
-    <script src="/assets/js/index.js"></script>
+<script  src="assets/js/models/bg/background.js"></script>
+<script  src="assets/js/models/player.js"></script>
+<script  src="assets/js/models/game.js"></script>
+<script  src="assets/js/index.js"></script>
   </body>
 </html>
