fixed movement + background structure

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <script  src="assets/js/models/bg/bg-elements.js"></script>
 <script  src="assets/js/constants.js"></script>
 
+<script  src="assets/js/models/bg/background-controller.js"></script>
 <script  src="assets/js/models/bg/background.js"></script>
 <script  src="assets/js/models/player.js"></script>
 <script  src="assets/js/models/game.js"></script>
