--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
   </head>
   <body>
     <canvas id="main-canvas"></canvas>
+
 <script  src="assets/js/models/bg/bg-elements.js"></script>
+
 <script  src="assets/js/constants.js"></script>
+<script  src="assets/js/models/utils.js"></script>
 
 <script  src="assets/js/models/bg/background-controller.js"></script>
 <script  src="assets/js/models/bg/background.js"></script>
 <script  src="assets/js/models/player.js"></script>
+
 <script  src="assets/js/models/game.js"></script>
+
 <script  src="assets/js/index.js"></script>
   </body>
 </html>
