feat: 1rst enemy + collision system

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 <script  src="assets/js/models/bg/background-controller.js"></script>
 <script  src="assets/js/models/bg/background.js"></script>
+<script  src="assets/js/models/enemies/rock.js"></script>
+<script  src="assets/js/models/coin.js"></script>
 <script  src="assets/js/models/player.js"></script>
 
 <script  src="assets/js/models/game.js"></script>
