feat micromenu ingame, pause, and fixed speed for good leverage difficult

--- a/index copy.html
+++ b/index copy.html
@@ -8,13 +8,11 @@
     <link rel="stylesheet" href="/assets/css/main.css" />
   </head>
   <body>
-    <canvas id="main-canvas"></canvas>
-
-    <div class="menu-ingame">
-      <img id="title-text" src="assets/images/dragonrider-text.png" />
-      <div id="timer"> 00:00 </div>
-      <button id="pause-button">PAUSE GAME</button>
+    <div id="start-screen">
+      <link rel="bg" href="/assets/images/bg-static.jpg" />
     </div>
+
+    <canvas id="main-canvas"></canvas>
 
     <script src="assets/js/models/bg/bg-elements.js"></script>
 
@@ -25,8 +23,7 @@
     <script src="assets/js/models/bg/background.js"></script>
     <script src="assets/js/models/enemies/rock.js"></script>
     <script src="assets/js/models/coin.js"></script>
-    
-    <script src="assets/js/models/player.js"></script>
+    /<script src="assets/js/models/player.js"></script>
 
     <script src="assets/js/models/game.js"></script>
 
