feat: tryAgain system

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <canvas id="main-canvas"></canvas>
 
     <div id="gameover-menu" class="hidden">
-      <img class="title-text" src="assets/images/interface/gameover-ui.png" />
-      <img class="title-text" src="assets/images/interface/tryagain-ui.png" />
+      <img id="gameover-ui" src="assets/images/interface/gameover-ui.png" />
+      <img id="tryagain-ui" class="clickable" src="assets/images/interface/tryagain-ui.png" />
     </div>
   </div>
 
