--- a/index.html
+++ b/index.html
@@ -9,20 +9,37 @@
   </head>
 
   <body>
-      <div id="game-container">
-    <canvas id="main-canvas"></canvas>
+    <div id="game-container">
+  <canvas id="main-canvas" class="hidden"></canvas>
 
-    <div id="gameover-menu" class="hidden">
-      <img id="gameover-ui" src="assets/images/interface/gameover-ui.png" />
-      <img id="tryagain-ui" class="clickable" src="assets/images/interface/tryagain-ui.png" />
-    </div>
+  <div id="start-menu">
+    <img src="assets/images/interface/dragonrider-ui.png" />
+    <img
+      id="startgame-ui"
+      class="clickable"
+      src="assets/images/interface/startgame-ui.png"
+    />
   </div>
 
-  <div class="menu-ingame">
-    <img class="title-text" src="assets/images/interface/dragonrider-ui.png" />
-    <div id="timer">00:00</div>
-    <button id="pause-button">PAUSE GAME</button>
+  <div id="gameover-menu" class="hidden">
+    <img id="gameover-ui" src="assets/images/interface/gameover-ui.png" />
+    <img
+      id="tryagain-ui"
+      class="clickable"
+      src="assets/images/interface/tryagain-ui.png"
+    />
   </div>
+</div>
+
+<div class="menu-ingame hidden">
+  <img
+    class="title-text"
+    src="assets/images/interface/dragonrider-ui.png"
+  />
+  <div id="timer">00:00</div>
+  <button id="pause-button">PAUSE GAME</button>
+</div>
+
 
     <script src="assets/js/models/bg/bg-elements.js"></script>
 
